--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,13 @@
 # VARIABLES
 --------------------------------------------------------------*/
 
-
+:root {
+  --delft-blue: #3A3C63;
+  --floral-white: #F9F4EA;
+  --atomic-tangerin: #F19460;
+  --keppel: #51B599;
+  --iris: #6E46CC;
+}
 
 /*--------------------------------------------------------------
 # GLOBALS
@@ -21,4 +27,8 @@
     margin: 0;
     padding: 0;
   }
+
+/*--------------------------------------------------------------
+# HEADER
+--------------------------------------------------------------*/
 
