--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,20 @@
 }
 
 /*--------------------------------------------------------------
+# FONTS
+--------------------------------------------------------------*/
+
+@font-face {
+  font-family: 'Montserrat-Bold';
+  src: url(../fonts/Montserrat-Bold.ttf);
+}
+
+@font-face {
+  font-family: 'Inter-Light';
+  src: url(../fonts/Inter-Light.ttf);
+}
+
+/*--------------------------------------------------------------
 # GLOBALS
 --------------------------------------------------------------*/
 
@@ -32,7 +46,7 @@ html {
 body {
   background-color: var(--c-delft-blue);
   color: var(--c-floral-white);
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Inter-Light';
 }
 
 /*--------------------------------------------------------------
@@ -53,16 +67,60 @@ header img {
 # MAIN
 --------------------------------------------------------------*/
 
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    "live-score player-list"
+    "score-list player-list";
+}
+
+/*--------------------------------------------------------------
+# LIVE SCORE
+--------------------------------------------------------------*/
+
+.live-score {
+  grid-area: live-score;
+}
+
+/*--------------------------------------------------------------
+# SCORE LIST
+--------------------------------------------------------------*/
+
+.score-list {
+  grid-area: score-list;
+}
+
 /*--------------------------------------------------------------
 # PLAYER-LIST
 --------------------------------------------------------------*/
 
 .player-list {
+  color: #1E1D22;
   display: flex;
   justify-content: space-between;
   padding: 3rem;
+  grid-area: player-list;
+  background-color: #F9F4EA ;
+  margin: 2rem;
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+  line-height: 1.6;
+  font-size: 1.1rem;
 }
 
-.player-list li {
-  list-style: none;
+.player-list h2 {
+  padding-bottom: 1rem;
+  font-weight: bolder;
+  font-family: 'Montserrat-Bold';
+}
+
+.player-list p span {
+margin-left: 1rem;
+padding: 0 0.5rem;
+border-radius: 0.5rem;
+  background-color: #1E1D22;
+  color: #F9F4EA;
 }
