--- a/public/style.css
+++ b/public/style.css
@@ -17,12 +17,12 @@
 
 @font-face {
   font-family: 'Montserrat-Bold';
-  src: url(../../fonts/Montserrat-Bold.ttf);
+  src: url(../fonts/Montserrat-Bold.ttf);
 }
 
 @font-face {
   font-family: 'Inter-Light';
-  src: url(../../fonts/Inter-Light.ttf);
+  src: url(../fonts/Inter-Light.ttf);
 }
 
 /*--------------------------------------------------------------
